Draft job execution history page.

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Shared/_LayoutCake.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Shared/_LayoutCake.cshtml
@@ -17,6 +17,7 @@
 
     <script src="https://kendo.cdn.telerik.com/2015.3.930/js/jquery.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2015.3.930/js/kendo.all.min.js"></script>
+    <script src="~/MVCGridHandler.axd/script.js"></script>
     @*    kendo.timezones? *@
     @if (ViewBag.UseTableCSS != null && ViewBag.UseTableCSS)
     {
