Admin portal: Add latest dates of special platform's jobs

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Index.cshtml
@@ -1,47 +1,47 @@
 ﻿@model IEnumerable<DirectAgents.Domain.Entities.CPProg.ExtAccount>
 @{
-    string platformCode = (string)Session["platformCode"];
-    string campId = (string)Session["campId"];
+    var platformCode = (string)Session["platformCode"];
+    var campId = (string)Session["campId"];
 }
 <h2>External Accounts</h2>
 
 <table>
-<tr>
-    <th></th>
-    <th>Partner</th>
-    <th style="text-align:right">ID</th>
-    <th colspan="2">Ext Account (X = disabled)</th>
-    <th>External Id</th>
-    <th colspan="2">Network / Filter?</th>
-    <th>Stats</th>
-    <th>List...</th>
-    <th>Creative URL Format</th>
-</tr>
-@foreach (var extAcct in Model)
-{
-<tr>
-    <td>@Html.ActionLink("Edit", "Edit", new { id = extAcct.Id })</td>
-    <td>@extAcct.Platform.Name</td>
-    <td style="text-align:right">@extAcct.Id</td>
-    <td>@extAcct.Name</td>
-    <td>@(extAcct.Disabled ? "X" : "")</td>
-    <td>@extAcct.ExternalId</td>
-    <td>@(extAcct.Network != null ? extAcct.Network.Name : "")</td>
-    <td>@(extAcct.HasAnyFilter() ? "*" : "")</td>
-    <td>
-        @Html.ActionLink("Upload", "UploadStats", new { id = extAcct.Id }) |
-        @Html.ActionLink("Raw", "ExtAccount", "Stats", new { acctid = extAcct.Id }, null)
-    </td>
-    <td>
-        @Html.ActionLink("Strategies", "Strategies", "ExtAccounts", new { id = extAcct.Id }, null) |
-        @Html.ActionLink("Creatives", "Index", "TDads", new { id = extAcct.Id }, null) |
-        @Html.ActionLink("AdSets", "AdSets", "ExtAccounts", new { id = extAcct.Id }, null) |
-        @Html.ActionLink("Keywords", "Keywords", "ExtAccounts", new { id = extAcct.Id }, null) |
-        @Html.ActionLink("SearchTerms", "SearchTerms", "ExtAccounts", new { id = extAcct.Id }, null)
-    </td>
-    <td>@extAcct.CreativeURLFormat</td>
-</tr>
-}
+    <tr>
+        <th></th>
+        <th>Partner</th>
+        <th style="text-align:right">ID</th>
+        <th colspan="2">Ext Account (X = disabled)</th>
+        <th>External Id</th>
+        <th colspan="2">Network / Filter?</th>
+        <th>Stats</th>
+        <th>List...</th>
+        <th>Creative URL Format</th>
+    </tr>
+    @foreach (var extAcct in Model)
+    {
+        <tr>
+            <td>@Html.ActionLink("Edit", "Edit", new {id = extAcct.Id})</td>
+            <td>@extAcct.Platform.Name</td>
+            <td style="text-align: right">@extAcct.Id</td>
+            <td>@extAcct.Name</td>
+            <td>@(extAcct.Disabled ? "X" : "")</td>
+            <td>@extAcct.ExternalId</td>
+            <td>@(extAcct.Network != null ? extAcct.Network.Name : "")</td>
+            <td>@(extAcct.HasAnyFilter() ? "*" : "")</td>
+            <td>
+                @Html.ActionLink("Upload", "UploadStats", new {id = extAcct.Id}) |
+                @Html.ActionLink("Raw", "ExtAccount", "Stats", new {acctid = extAcct.Id}, null)
+            </td>
+            <td>
+                @Html.ActionLink("Strategies", "Strategies", "ExtAccounts", new {id = extAcct.Id}, null) |
+                @Html.ActionLink("Creatives", "Index", "TDads", new {id = extAcct.Id}, null) |
+                @Html.ActionLink("AdSets", "AdSets", "ExtAccounts", new {id = extAcct.Id}, null) |
+                @Html.ActionLink("Keywords", "Keywords", "ExtAccounts", new {id = extAcct.Id}, null) |
+                @Html.ActionLink("SearchTerms", "SearchTerms", "ExtAccounts", new {id = extAcct.Id}, null)
+            </td>
+            <td>@extAcct.CreativeURLFormat</td>
+        </tr>
+    }
 </table>
 <br />
 @if (!string.IsNullOrWhiteSpace(platformCode))
