--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexSpecialPlatformStats.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexSpecialPlatformStats.cshtml
@@ -36,7 +36,7 @@
                     <td>@summary.Account.Name</td>
                     <td style="text-align: center">@(summary.Account.Disabled ? "X" : "")</td>
                     <td style="text-align: right">@summary.EarliestDate.ToShortDateString()</td>
-                    @if (summary.LatestDate == yesterday)
+                    @if (summary.LatestDate != null && summary.LatestDate.Value.Date == yesterday)
                     {
                         <td style="text-align: right; background-color: lightgreen">@summary.LatestDate.ToShortDateString()</td>
                     }
